# RayMarching

./: CMakeLists.txt  box.h  hit.h  includes.h  main.cc  ray.h  sphere.h  vector.h
RayMarchingCPP/: .gitignore  CMakeLists.txt  box.h  color.h  includes.h  main.cc  plane.h  ray.h  shape.h  vector.h
RayMarchingCPP/imgs/: cool.ppm  diffuse.ppm  image.ppm  img.ppm  lambert_2.ppm  not_norm.ppm  render.ppm  zebra.ppm
RayMarchingPY/: color.py  main.py  ray.py  vector.py
RayMarchingTS/: index.html  package-lock.json  package.json  py.py  tsconfig.json  vite.config.js
RayMarchingTS/public/shaders/: fragment.glsl  fragment_first_render.glsl  fragment_reflection.glsl  vertex.glsl
RayMarchingTS/src/: input.js  input.ts  old.tst  script.js  script.ts
imgs/: render.ppm
